--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="news">新闻</string>
     <string name="newstime">发布时间:%1$s</string>
     <string name="newstitle">标题:%1$s</string>
+    <string name="news_from">%1$s %2$s</string>
     <!--视频-->
     <string name="videos">视频</string>
     <string name="video_play_times">%1$s次播放</string>
